--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:h2:file:./db/shop_exchange_db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+javax.persistence.schema-generation.database.action=create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 server.servlet.context-path=/api
