--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:file:./db/shop_exchange_db
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:h2:file:./db/shop_exchange_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-#spring.jpa.hibernate.ddl-auto=create-drop
-javax.persistence.schema-generation.database.action=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
+#javax.persistence.schema-generation.database.action=create-drop
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 server.servlet.context-path=/api
