--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:h2:file:./db/shop_exchange_db;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
